# GOE-Cymaglyph

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  README.md  VERSION.md  build.sh  professional_synthesizer_research.md  quick_test  quick_test.cpp  wave_plugin_enhancement_guide.md
Presets/: CenterClamped.xml  CircularMembrane.xml  FaradayWaves.xml  HeatVision.xml  PlateHarmonic.xml  SquareWave.xml  SweepingPlate.xml  WaterRipples.xml
Source/: ControlPanel.cpp  ControlPanel.h  EnhancedVisualizer.cpp  EnhancedVisualizer.h  ModeTables.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SettingsPanel.cpp  SettingsPanel.h  ShaderPrograms.h  SynthEngine.cpp  SynthEngine.h  Visualizer.cpp  Visualizer.h
